--- a/report.Rmd
+++ b/report.Rmd
@@ -13,8 +13,8 @@ nocite: '@*'
 ### Description of the Plague
 
 The Second Pandemic, otherwise known as the Black Death, played a key role in the shaping of late Medieval Europe and the world as we know it today. A devastating disease, known in historical sources simply as "plague" or "plagas", killed 40% of Europe's population just between 1347 and 1352 @jedwab_pandemics_2019, and which continued to afflict Europe in waves until the 19th century. The bacterium responsible for the disease, *Yersinia pestis*, can cause 3 forms of plague in humans, all of which present at first with common flu symptoms. Bubonic plague, the most common outcome of infection @evans_pneumonic_2022, with the most spectacular presentation of this form being painful, blackened, and swollen lymph nodes known as buboes. While mortality resulting from the bubonic form is only moderate, untreated bubonic plague may also develop into one of the other two forms of the disease @world_health_organization_plague_nodate. Pneumonic plague, the second most common form of the disease, occurs when the lungs become infected; symptoms commonly include chest pain, shortness of breath, and the coughing of blood. This form is nearly 100% fatal, becoming untreatable even to modern medicine within 24-36h of the onset of symptoms. While other forms of the disease have an incubation period of 2-8 days, onset of symptoms for the pneumonic form can be within as little as 24 hours of infection @noauthor_plague_nodate, with death following shortly thereafter @pechous_pneumonic_2016. The rarest form of plague, septicemic, results when *Yersinia pestis* multiplies in the blood. Uniquely, this variant causes the necrosis of tissues, and internal organ failure. While it is more treatable than pneumonic plague, in the Middle Ages, as no treatment was known for any form of the disease, it shared pneumonic plague's certain mortality. 
-The disease is spread most commonly through the bite of an infected rat flea, though it can also be spread in its pneumonic form from person-to-person @world_health_organization_plague_nodate. Evidence also indicates that human fleas can also be a vector for the disease, and can both receive it from and transmit it to humans @hufthammer_rats_2013, with SIR modeling demonstrating that a model based on transmission through human ectoparasites is similar in fit to one based on transmission through rat fleas @dean_human_2018.
-The recent digitization of a substantial volume of plague records @buntgen_digitizing_2012 alongside new fine-grained population estimate rasters for pre-census periods through the HYDE project @klein_goldewijk_anthropogenic_2017 allow for myriad novel analysis of the Second Pandemic. Through analysis of the characteristics and traits of the disease in a time when effective medical treatment for most diseases was completely unknown, further knowledge regarding societal responses to disease as well as the effect of unchecked disease on a population can be studied. Additionally, knowledge of the true severity of the disease various communities and s can help to provide historical context for events and developments in the Middle Ages.
+The disease is spread most commonly through the bite of an infected rat flea, though it can also be spread in its pneumonic form from person-to-person @world_health_organization_plague_nodate. Evidence also indicates that human fleas can also be a vector for the disease, and can both receive it from and transmit it to humans @hufthammer_rats_2013, with SIR modeling demonstrating that a model based on transmission through human ectoparasites is similar in fit to one based on transmission through rat fleas @dean_human_2018. NOTE: another paper can be cited here where good results are found w/human ecto
+The recent digitization of a substantial volume of plague records @buntgen_digitizing_2012 alongside new fine-grained population estimate rasters for pre-census periods through the HYDE project @klein_goldewijk_anthropogenic_2017 allow for myriad novel analysis of the Second Pandemic. Through analysis of the characteristics and traits of the disease in a time when effective medical treatment for most diseases was completely unknown, further knowledge regarding societal responses to disease as well as the effect of unchecked disease on a population can be studied. Additionally, knowledge of the true severity of the disease throughout various regions of Europe can help to provide historical context for events and developments in the region throughout the Middle Ages. Furthermore, given the severity and gruesome nature of the disease, modelling its spread through and impact upon Medieval Europe may prove a sobering reminder of the potential severity of an incurable epidemic. 
 
 ### Data Sources
 
@@ -22,6 +22,30 @@ The recent digitization of a substantial volume of plague records @buntgen_digit
 * HYDE 3.2 @klein_goldewijk_anthropogenic_2017, a monumental collection of rasters, encoding global environmental conditions and other information, including the most recent historical population and population density estimates currently available for pre-census speriods.
 * Approximate European borders shapefile for 1279 from a ThinkQuest educational web-site design competition held in 2000 @thinkquest_citation_post_rework. While this data is entirely student-created and may present minor inaccuracies, as it is used simply for the purposes of aiding in visualization, this is not a major concern.
 
+## Methods
+
+### Preliminary Work Motivating the Model
+
+- the death raster,
+- the plague over death raster
+- the correlation between population density and deaths, and WHY its important/'_surprising_'
+
+### Deterministic Model
+
+- describe the model's terms, the motivation behind each + each normaliz8n
+- describe the formula for the model
+- describe the temporal factor(s)
+- make it a statistical model?
+
+
+## Results
+
+### Prelim Results ?
+
+### Deterministic Model Results
+
+- note the implications behind the parameters which were successful, esp. that worst_case.
+- note that mortality wasnt really hugely influential, or at least not as influential as raising effectiveness over distance
 
 ```{r setup, include=FALSE, echo=FALSE}
 library(sf)
@@ -248,10 +272,12 @@ target_years = all_target_years[which(all_target_years$year > 1345 &
 recorded_years = unique(target_years$year)
 first_year = recorded_years[1]
 
-d_smoothing = seq(0.40, 0.80, by=0.2) #size of the region extremely close to 1.0 in distance raster
+d_smoothing = c(0.8)
+              #seq(0.40, 0.80, by=0.2) #size of the region extremely close to 1.0 in distance raster
 d_coeff =     seq(6, 10, by=2) #size of the overall region above d_threshold in distance raster
 
-worst_case =  seq(0.5, 0.9, by=0.2) #estimated maximum yearly saturation % of infection among S
+worst_case =  c(0.9)
+              #seq(0.5, 0.9, by=0.2) #estimated maximum yearly saturation % of infection among S
 mortality   = seq(0.4, 0.8, by=0.2) #estimated average mortality over all forms contracted
 
 #non-tunable params
